[package]
name = "yew_quick"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stylist = {version = "0.12", features = ["yew_integration"]}
yew = { version = "0.20.0", features = ["csr"] }
regex = "1.7"
