[package]
name = "yew_quick"
version = "0.2.2"
edition = "2021"
authors = ["zomem"]
description = "yew 框架快速开发组件库"
license = "MIT"
readme = "README.md"
include = ["/src"]
repository = "https://github.com/zomem/yew_quick"
keywords = ["yew", "component"]
categories = ["web"]


[dependencies]
stylist = {version = "0.12", features = ["yew_integration"]}
yew = { version = "0.20.0", features = ["csr"] }
